--- a/.github/ISSUE_TEMPLATE/submit-blog.yml
+++ b/.github/ISSUE_TEMPLATE/submit-blog.yml
@@ -34,4 +34,11 @@ body:
       label: 主要领域
       placeholder: 例如：前端、JavaScript、技术评论
     validations:
+      required: true
+  - type: textarea
+    id: blog-introduction
+    attributes:
+      label: 用一句话介绍一下写博客初衷和推荐理由
+      placeholder: 例如：我写博客是为了分享我的学习经验和见解。
+    validations:
       required: true 
