--- a/.github/workflows/auto-merge-blog.yml
+++ b/.github/workflows/auto-merge-blog.yml
@@ -17,10 +17,13 @@ jobs:
        contains(github.event.issue.labels.*.name, 'approved'))
     
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+          ref: main
       
       - name: Setup Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v3
         with:
           python-version: '3.x'
           
@@ -28,6 +31,12 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install requests
+          
+      - name: Debug Issue Body
+        run: |
+          echo "Issue Number: ${{ github.event.issue.number }}"
+          echo "Event Name: ${{ github.event_name }}"
+          echo "Event Type: ${{ github.event.action }}"
           
       - name: Update README
         run: |
@@ -37,7 +46,7 @@ jobs:
           ISSUE_NUMBER: ${{ github.event.issue.number }}
           
       - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v3
+        uses: peter-evans/create-pull-request@v5
         with:
           commit-message: 'Add new blog from issue #${{ github.event.issue.number }}'
           title: 'Add new blog from issue #${{ github.event.issue.number }}'
